@@ -3,6 +3,8 @@ package bio.terra.catalog.service.dataset;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -10,10 +12,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import bio.terra.catalog.common.StorageSystem;
 import bio.terra.catalog.service.dataset.exception.DatasetNotFoundException;
-import bio.terra.catalog.service.dataset.exception.InvalidDatasetException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -29,38 +29,40 @@ class DatasetDaoTest {
       """
           {"sampleId": "12345", "species": ["mouse", "human"]}""";
 
-  private Dataset createDataset(String storageSourceId, StorageSystem storageSystem)
-      throws InvalidDatasetException {
-    Dataset dataset =
-        new Dataset(null, storageSourceId, storageSystem, DatasetDaoTest.METADATA, null);
-    return datasetDao.create(dataset);
+  private Dataset upsertDataset(String storageSourceId, StorageSystem storageSystem) {
+    return upsertDataset(storageSourceId, storageSystem, DatasetDaoTest.METADATA);
+  }
+
+  private Dataset upsertDataset(
+      String storageSourceId, StorageSystem storageSystem, String metadata) {
+    return datasetDao.upsert(new Dataset(storageSourceId, storageSystem, metadata));
   }
 
   @Test
   void testListAllExternalDatasets() {
-    String sourceId = "";
+    String storageSourceId = UUID.randomUUID().toString();
     for (StorageSystem value : StorageSystem.values()) {
-      createDataset(sourceId, value);
+      upsertDataset(storageSourceId, value);
     }
-
-    List<Dataset> result =
-        datasetDao.listAllExternalDatasets().stream()
-            .filter(dataset -> dataset.storageSourceId().equals(sourceId))
-            .collect(Collectors.toList());
-    assertEquals(1, result.size());
-    assertEquals(result.get(0).storageSystem(), StorageSystem.EXTERNAL);
+    List<Dataset> datasets =
+        datasetDao.listAllDatasets(StorageSystem.EXTERNAL).stream()
+            .filter(dataset -> dataset.storageSourceId().equals(storageSourceId))
+            .toList();
+    assertThat(datasets, hasSize(1));
+    Dataset dataset = datasets.get(0);
+    assertThat(dataset.storageSourceId(), is(storageSourceId));
+    assertThat(dataset.storageSystem(), is(StorageSystem.EXTERNAL));
   }
 
   @Test
   void testDatasetCrudOperations() {
     String storageSourceId = UUID.randomUUID().toString();
-    Dataset dataset = createDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
+    Dataset dataset = upsertDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
+    var newMetadata = "{}";
+    Dataset updateRequest = dataset.withMetadata(newMetadata);
+    datasetDao.update(updateRequest);
     DatasetId id = dataset.id();
-    Dataset updateRequest =
-        new Dataset(id, storageSourceId, StorageSystem.TERRA_WORKSPACE, METADATA, null);
-    datasetDao.retrieve(id);
-    Dataset updatedDataset = datasetDao.update(updateRequest);
-    assertEquals(updatedDataset.storageSystem(), updateRequest.storageSystem());
+    assertEquals(newMetadata, datasetDao.retrieve(id).metadata());
     assertTrue(datasetDao.delete(dataset));
     assertThrows(DatasetNotFoundException.class, () -> datasetDao.retrieve(id));
   }
@@ -68,30 +70,30 @@ class DatasetDaoTest {
   @Test
   void testCreateDatasetWithDifferentSources() {
     String storageSourceId = UUID.randomUUID().toString();
-    createDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
-    createDataset(storageSourceId, StorageSystem.TERRA_WORKSPACE);
-    long datasetCount =
+    for (StorageSystem value : StorageSystem.values()) {
+      upsertDataset(storageSourceId, value);
+    }
+    List<Dataset> datasets =
         datasetDao.listAllDatasets().stream()
             .filter(dataset -> dataset.storageSourceId().equals(storageSourceId))
-            .count();
-    assertEquals(2L, datasetCount);
+            .toList();
+    assertThat(datasets, hasSize(StorageSystem.values().length));
+    datasets.forEach(dataset -> assertThat(dataset.storageSourceId(), is(storageSourceId)));
   }
 
   @Test
   void testCreateDuplicateDataset() {
     String storageSourceId = UUID.randomUUID().toString();
-    createDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
-    assertThrows(
-        InvalidDatasetException.class,
-        () -> createDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO));
+    upsertDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
+    Dataset dataset = upsertDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO, "{}");
+
+    assertThat(dataset.metadata(), is("{}"));
   }
 
   @Test
   void testHandleNonExistentDatasets() {
     DatasetId id = new DatasetId(UUID.randomUUID());
-    String storageSourceId = UUID.randomUUID().toString();
-    Dataset dataset =
-        new Dataset(id, storageSourceId, StorageSystem.TERRA_WORKSPACE, METADATA, null);
+    Dataset dataset = new Dataset(id, "source id", StorageSystem.TERRA_WORKSPACE, METADATA, null);
     assertThrows(DatasetNotFoundException.class, () -> datasetDao.retrieve(id));
     assertThrows(DatasetNotFoundException.class, () -> datasetDao.update(dataset));
     assertFalse(datasetDao.delete(dataset));
@@ -99,10 +101,12 @@ class DatasetDaoTest {
 
   @Test
   void testFind() {
-    Dataset d1 = createDataset("id1", StorageSystem.TERRA_DATA_REPO);
+    String storageSourceId = UUID.randomUUID().toString();
+    Dataset d1 = upsertDataset(storageSourceId, StorageSystem.TERRA_DATA_REPO);
     // Create a TDR dataset that we don't request in the query below.
-    createDataset("id2", StorageSystem.TERRA_DATA_REPO);
-    Dataset d3 = createDataset("id3", StorageSystem.EXTERNAL);
+    String storageSourceId2 = UUID.randomUUID().toString();
+    upsertDataset(storageSourceId2, StorageSystem.TERRA_DATA_REPO);
+    Dataset d3 = upsertDataset(storageSourceId, StorageSystem.EXTERNAL);
     var datasets =
         datasetDao.find(
             StorageSystem.TERRA_DATA_REPO, List.of(d1.storageSourceId(), d3.storageSourceId()));
